--- a/loon.conf
+++ b/loon.conf
@@ -79,21 +79,24 @@ ipasn-url=https://geodata.kelee.one/GeoLite2-ASN-P3TERX.mmdb             
 延迟最低 = url-test,全部_节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png  
 策略选择 = select,延迟最低,全部节点,负载均衡,故障转移,香港节点,台湾节点,澳门节点,日本节点,韩国节点,新加坡节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Back.png
 游戏手动 = select,游戏_节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/GAME.png
-Emby = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
 TikTok = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/TikTok_1.png
-大陆抖音 = select,DIRECT,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok_2.png
+大陆抖音 = select,DIRECT,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok_2.png
+人工智能 = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/ChatGPT/ChatGPT4.png
+港台番剧 = select,DIRECT,台湾节点,香港节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingSE.png
+境外网站 = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 Github = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/GitHub.png
 Google = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
+YouTube = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+Telegram = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+Instagram = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Instagram.png
+Facebook = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Facebook.png
 Spotify = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
 Twitter = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Twitter.png
 Netflix = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix_Letter.png
 Disney = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney+.png
-YouTube = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-人工智能 = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/ChatGPT/ChatGPT4.png
-Telegram = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-Instagram = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Instagram.png
-Facebook = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Facebook.png
-港台番剧 = select,DIRECT,台湾节点,香港节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingSE.png
+Emby = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Emby.png
+Apple = select,DIRECT,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
+Microsoft = select,DIRECT,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Microsoft.png
 # --------------------------------  
 # 👇手动选择地区节点
 香港节点 = select,香港延迟最低,香港故障转移,香港负载均衡,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
@@ -175,33 +178,33 @@ FINAL,兜底后备
 [Remote Rule]
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/rejectAd.list, policy=REJECT, tag=广告拦截合集-规则, enabled=true
 https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true
+https://rule.kelee.one/Loon/Threads.list, policy=香港节点, tag=Threads, enabled=true
 https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.list, enabled=true
 https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
 https://rule.kelee.one/Loon/Steam.list, policy=香港节点, tag=Steam.list, enabled=true
 https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://rule.kelee.one/Loon/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
-https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true  
+https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
 https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
 https://rule.kelee.one/Loon/Disney.list, policy=Disney, tag=Disney, enabled=true
-https://rule.kelee.one/Loon/Twitter.list, policy=Twitter, tag=Twitter, enabled=true    
-https://rule.kelee.one/Loon/Facebook.list, policy=Facebook, tag=Facebook, enabled=true  
+https://rule.kelee.one/Loon/Twitter.list, policy=Twitter, tag=Twitter, enabled=true
+https://rule.kelee.one/Loon/Facebook.list, policy=Facebook, tag=Facebook, enabled=true
 https://rule.kelee.one/Loon/Instagram.list, policy=Instagram, tag=Instagram, enabled=true
-https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true    
-https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true  
+https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
+https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
 https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true    
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true  
-https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true    
+https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
 https://rule.kelee.one/Loon/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
-https://kelee.one/Tool/Loon/Rule/ApplePushNotificationService.list, policy=DIRECT, tag=Apple Push Notification Service, enabled=true  
-https://kelee.one/Tool/Loon/Rule/AppleID.list, policy=DIRECT, tag=Apple Account, enabled=true
-https://rule.kelee.one/Loon/AppStore.list, policy=DIRECT, tag=AppStore, enabled=true      
-https://kelee.one/Tool/Loon/Rule/LAN_SPLITTER, policy=DIRECT, tag=LAN, enabled=true    
-https://kelee.one/Tool/Loon/Rule/REGION_SPLITTER, policy=DIRECT, tag=CN REGION, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/GeoIP_CN.list, policy=DIRECT, tag=GeoIP_CN, enabled=true  
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list, policy=DIRECT, tag=China公司, enabled=true  
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=DIRECT, tag=China域名, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/China/China.list, policy=DIRECT, tag=China域名, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/China/China_Domain.list, policy=DIRECT, tag=China域名补充, enabled=true
 
 #======================================#  
 # 👇Host
@@ -237,44 +240,50 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,
 # 👇插件资源
 #======================================#
 [Plugin]
+https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
+https://raw.githubusercontent.com/fmz200/wool_scripts/main/Loon/plugin/blockAds.plugin, tag=去广告合集, enabled=true
+https://kelee.one/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/Prevent_DNS_Leaks.plugin, policy=香港节点, enabled=true
+https://kelee.one/Tool/Loon/Plugin/SodaMusic_remove_ads.plugin, enabled=false
+https://kelee.one/Tool/Loon/Plugin/KuGou_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/Kuwo_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/QQMusic_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/XiaChuFang_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/MeiShiJie_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/NeteaseCloudMusic_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BaiduSearchWebpage_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/KuaiDi100_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/ZongHeng_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/WPS_checkin.plugin, enabled=false
-https://raw.githubusercontent.com/bgvioletsky/ios_rule/main/Loon/plugin/sxmd_sign.plugin, enabled=false  
+https://raw.githubusercontent.com/bgvioletsky/ios_rule/main/Loon/plugin/sxmd_sign.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/YouTubeSubtitlesTranslation.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Google.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/JD_Price.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/QQ_Redirect.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/TikTok_redirect.plugin, policy=日本延迟最低, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/AppleWeatherEnhancer.plugin, enabled=true  
+https://kelee.one/Tool/Loon/Plugin/AppleWeatherEnhancer.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/YY_Voice_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/YoudaoDict_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/QuarkBrowser_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/ShuQiCenterReader_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/MiaoRead_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/SevenCat_remove_ads.plugin, enabled=true  
+https://kelee.one/Tool/Loon/Plugin/SevenCat_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/DragonRead_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/QiDian_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/WexinMiniPrograms_Remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BaiduNetDisk_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Weixin_Official_Accounts_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/CoolApk_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled=true  
-https://kelee.one/Tool/Loon/Plugin/Tieba_remove_ads.plugin, enabled=true  
+https://kelee.one/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/Tieba_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/LoonGallery.plugin, policy=香港节点, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/QuickSearch.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Prevent_DNS_Leaks.plugin, policy=香港节点, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/TestFlightRegionUnlock.plugin, policy=DIRECT, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BoxJs.plugin, policy=香港节点, enabled=true  
+https://kelee.one/Tool/Loon/Plugin/BoxJs.plugin, policy=香港节点, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Sub-Store.plugin, policy=香港节点, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Script-Hub.plugin, policy=香港节点, enabled=true 
 
