--- a/loon.conf
+++ b/loon.conf
@@ -185,7 +185,7 @@ https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.lis
 https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
 https://rule.kelee.one/Loon/Steam.list, policy=香港节点, tag=Steam.list, enabled=true
 https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
-https://rule.kelee.one/Loon/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
+https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTok.list, tag=TikTok, policy=TikTok, update-interval=86400, enabled=true
 https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
 https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
