--- a/loon.conf
+++ b/loon.conf
@@ -198,6 +198,7 @@ https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
 https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, enabled=true
 https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
 https://rule.kelee.one/Loon/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true
@@ -240,6 +241,7 @@ https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/China/Chin
 # 👇插件资源
 #======================================#
 [Plugin]
+https://raw.githubusercontent.com/Semporia/TikTok-Unlock/refs/heads/master/Loon/TikTok.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
 https://raw.githubusercontent.com/fmz200/wool_scripts/main/Loon/plugin/blockAds.plugin, tag=去广告合集, enabled=true
