--- a/loon.conf
+++ b/loon.conf
@@ -176,8 +176,9 @@ FINAL,兜底后备
 # 👇远程分流规则
 #======================================#  
 [Remote Rule]
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/rejectAd.list, policy=REJECT, tag=广告拦截合集-规则, enabled=true
-https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
+https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/ChinaDomain.list, policy=DIRECT, tag=China域名, enabled=true
+https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/ChinaCompanyIp.list, policy=DIRECT, tag=China公司, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true
 https://rule.kelee.one/Loon/Threads.list, policy=香港节点, tag=Threads, enabled=true
@@ -185,7 +186,7 @@ https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.lis
 https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
 https://rule.kelee.one/Loon/Steam.list, policy=香港节点, tag=Steam.list, enabled=true
 https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
-https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTok.list, tag=TikTok, policy=TikTok, update-interval=86400, enabled=true
+https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
 https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
 https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
@@ -196,16 +197,16 @@ https://rule.kelee.one/Loon/Instagram.list, policy=Instagram, tag=Instagram, ena
 https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
 https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
 https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, enabled=true
-https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
-https://rule.kelee.one/Loon/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/China/China.list, policy=DIRECT, tag=China域名, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/China/China_Domain.list, policy=DIRECT, tag=China域名补充, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/rejectAd.list, policy=REJECT, tag=广告拦截合集-规则, enabled=true
+https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
+https://rule.kelee.one/Loon/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
+https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
 
 #======================================#  
 # 👇Host
@@ -241,13 +242,13 @@ https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/China/Chin
 # 👇插件资源
 #======================================#
 [Plugin]
-https://raw.githubusercontent.com/Semporia/TikTok-Unlock/refs/heads/master/Loon/TikTok.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
 https://raw.githubusercontent.com/fmz200/wool_scripts/main/Loon/plugin/blockAds.plugin, tag=去广告合集, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Prevent_DNS_Leaks.plugin, policy=香港节点, enabled=true
-https://kelee.one/Tool/Loon/Plugin/SodaMusic_remove_ads.plugin, enabled=false
+https://raw.githubusercontent.com/Semporia/TikTok-Unlock/refs/heads/master/Loon/TikTok.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/SodaMusic_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/KuGou_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Kuwo_remove_ads.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/QQMusic_remove_ads.plugin, enabled=true
@@ -287,7 +288,7 @@ https://kelee.one/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled=true
 https://kelee.one/Tool/Loon/Plugin/TestFlightRegionUnlock.plugin, policy=DIRECT, enabled=true
 https://kelee.one/Tool/Loon/Plugin/BoxJs.plugin, policy=香港节点, enabled=true
 https://kelee.one/Tool/Loon/Plugin/Sub-Store.plugin, policy=香港节点, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Script-Hub.plugin, policy=香港节点, enabled=true 
+https://kelee.one/Tool/Loon/Plugin/Script-Hub.plugin, policy=香港节点, enabled=true
 
 [Mitm]
 hostname=
