--- a/loon.conf
+++ b/loon.conf
@@ -7,39 +7,43 @@
 # General
 # =====================================  
 [General]  
-ip-mode = ipv4-only
+ip-mode = v4-only
+ipv6-vif = off
+# > DNS 服务器
+dns-server = system
+# >
 sni-sniffing = true
 disable-stun = false
 dns-reject-mode = LoopbackIP
 domain-reject-mode = DNS
 udp-fallback-mode = REJECT
-disconnect-on-policy-change = false  
-switch-node-after-failure-times = 3
-# > 跳过某个域名或者IP段
-skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local,e.crashlynatics.com
-bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32  
-# > DNS 服务器
-dns-server = system
-interface-mode = auto  
 # Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
 wifi-access-http-port = 7222
-wifi-access-socks5-port = 7221  
+wifi-access-socks5-port = 7221
 allow-wifi-access = false
-# > 代理测速 URL
-internet-test-url=http://connectivitycheck.platform.hicloud.com/generate_204  
-proxy-test-url=http://www.gstatic.com/generate_204    
+# >
+interface-mode = auto
 # > 测速超时 (s)
 test-timeout = 2
+# >
+disconnect-on-policy-change = false 
+switch-node-after-failure-times = 3
+# > 代理测速 URL
+internet-test-url = http://connectivitycheck.platform.hicloud.com/generate_204
+proxy-test-url = http://www.gstatic.com/generate_204  
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 #real-ip=msftconnecttest.com,msftncsi.com,*.msftconnecttest.com,*.msftncsi.com,*.srv.nintendo.net,*.stun.playstation.net,xbox.*.microsoft.com,*.xboxlive.com,*.battlenet.com.cn,*.battlenet.com,*.blzstatic.cn,*.battle.net                  
 # 解析器
-resource-parser=https://raw.githubusercontent.com/sub-store-org/Sub-Store/release/sub-store-parser.loon.min.js      
+resource-parser = https://raw.githubusercontent.com/sub-store-org/Sub-Store/release/sub-store-parser.loon.min.js    
 # geoip
-geoip-url=https://geodata.kelee.one/Country-Masaiki.mmdb
+geoip-url = https://geodata.kelee.one/Country-Masaiki.mmdb
 # ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
 # ssid-trigger="default":rule,"cellular":rule,"ASUS":direct,"TPLINK":proxy       
-ipasn-url=https://geodata.kelee.one/GeoLite2-ASN-P3TERX.mmdb                            
+ipasn-url = https://geodata.kelee.one/GeoLite2-ASN-P3TERX.mmdb                          
+# > 跳过某个域名或者IP段
+skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlynatics.com
+bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32 
 
 # =====================================  
 # 👇本地代理节点
@@ -176,9 +180,12 @@ FINAL,兜底后备
 # 👇远程分流规则
 #======================================#  
 [Remote Rule]
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
-https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/ChinaDomain.list, policy=DIRECT, tag=China域名, enabled=true
-https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/ChinaCompanyIp.list, policy=DIRECT, tag=China公司, enabled=true
+https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
+https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/XiaoHongShu/XiaoHongShu.list, policy=DIRECT, tag=小红书, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=false
+https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=false
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true
 https://rule.kelee.one/Loon/Threads.list, policy=香港节点, tag=Threads, enabled=true
@@ -187,7 +194,6 @@ https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled
 https://rule.kelee.one/Loon/Steam.list, policy=香港节点, tag=Steam.list, enabled=true
 https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
-https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
 https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
 https://rule.kelee.one/Loon/Disney.list, policy=Disney, tag=Disney, enabled=true
@@ -200,13 +206,12 @@ https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, en
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
+https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true
 https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/rejectAd.list, policy=REJECT, tag=广告拦截合集-规则, enabled=true
-https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
-https://rule.kelee.one/Loon/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
-https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/GeoIP_CN.list, policy=DIRECT, tag=大陆网站, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=国内网站, enabled=true
 
 #======================================#  
 # 👇Host
@@ -242,54 +247,17 @@ https://rule.kelee.one/Loon/DouYin.list, policy=大陆抖音, tag=DouYin, enable
 # 👇插件资源
 #======================================#
 [Plugin]
-https://kelee.one/Tool/Loon/Plugin/Block_HTTPDNS.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BlockAdvertisers.plugin, enabled=true
-https://raw.githubusercontent.com/fmz200/wool_scripts/main/Loon/plugin/blockAds.plugin, tag=去广告合集, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Remove_ads_by_keli.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Prevent_DNS_Leaks.plugin, policy=香港节点, enabled=true
-https://raw.githubusercontent.com/Semporia/TikTok-Unlock/refs/heads/master/Loon/TikTok.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/SodaMusic_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/KuGou_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Kuwo_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/QQMusic_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/XiaChuFang_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/MeiShiJie_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/YouTube_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Weibo_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/NeteaseCloudMusic_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BaiduSearchWebpage_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/KuaiDi100_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/ZongHeng_remove_ads.plugin, enabled=true
-https://raw.githubusercontent.com/bgvioletsky/ios_rule/main/Loon/plugin/sxmd_sign.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/YouTubeSubtitlesTranslation.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Google.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/JD_Price.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/QQ_Redirect.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/TikTok_redirect.plugin, policy=日本延迟最低, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/AppleWeatherEnhancer.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/YY_Voice_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/YoudaoDict_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/QuarkBrowser_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/ShuQiCenterReader_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/MiaoRead_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/SevenCat_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/DragonRead_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/QiDian_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/WexinMiniPrograms_Remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BaiduNetDisk_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Weixin_Official_Accounts_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/CoolApk_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Zhihu_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Tieba_remove_ads.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/LoonGallery.plugin, policy=香港节点, enabled=true
-https://kelee.one/Tool/Loon/Plugin/QuickSearch.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Node_detection_tool.plugin, enabled=true
-https://kelee.one/Tool/Loon/Plugin/TestFlightRegionUnlock.plugin, policy=DIRECT, enabled=true
-https://kelee.one/Tool/Loon/Plugin/BoxJs.plugin, policy=香港节点, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Sub-Store.plugin, policy=香港节点, enabled=true
-https://kelee.one/Tool/Loon/Plugin/Script-Hub.plugin, policy=香港节点, enabled=true
-
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/cookies.plugin, enabled=false
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/weibo.plugin, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/blockAds.plugin, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/WexinMiniPrograms_Remove_ads.plugin, enabled=true
+https://raw.githubusercontent.com/app2smile/rules/master/plugin/spotify.plugin, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/spotify.png, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/Auto_Join_TF.plugin, policy=兜底后备, enabled=false
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/skip-proxy.plugin, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Imm.png, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/HTTPDNS.Block.plugin, enabled=true
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=兜底后备, enabled=true
+https://raw.githubusercontent.com/sub-store-org/Sub-Store/master/config/Loon.plugin, policy=兜底后备, enabled=true
+https://raw.githubusercontent.com/Script-Hub-Org/Script-Hub/main/modules/script-hub.loon.plugin, policy=兜底后备, enabled=true
 [Mitm]
 hostname=
 ca-p12=
